# mtc_demos

./: CMakeLists.txt  package.xml  setup.py
launch/: pa10_grasp_provider.launch
python/: CMakeLists.txt
python/src/mtc_demos/: stages.py
python/wrapper/: CMakeLists.txt
python/wrapper/src/: stages.cpp  stages.cpp.in
src/: CMakeLists.txt  baxter.cpp  baxter_bimodal.cpp  bimanual_pepper.cpp  bimodal_baxter.cpp  bimodal_pa10.cpp  bimodal_pepper.cpp  bimodal_pr2.cpp  iros_bimanual.cpp  iros_grasp.cpp  kuka_bimodal.cpp  pa10.cpp  pa10_bimodal.cpp  pa10_grasp_provider.cpp  pa10_handover.cpp  pepper.cpp  pepper_bimanual.cpp  pepper_bimodal.cpp  pr2.cpp  pr2_bimodal.cpp  test_utils.h  yumi.cpp  yumi_bimanual.cpp  yumi_handover.cpp
stages/: CMakeLists.txt  automatica.cpp  automatica.h  bimanual_grasp_pose.cpp  bimanual_grasp_pose.h  generate_touch_pose.cpp  grasp_provider.cpp  grasp_provider.h  grasping_tasks.cpp  grasping_tasks.h
test/: CMakeLists.txt  baxter_bimodal.test  kuka_bimodal.test  pa10_bimodal.test  pepper_bimanual.test  pepper_bimodal.test  pr2_bimodal.test  yumi_bimanual.test  yumi_handover.test
