<?xml version="1.0"?>
<package format="2">
  <name>mtc_demos</name>
  <version>0.0.0</version>
  <description>Examples for Moveit Task Constructor</description>

  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>rviz_marker_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>grasping_msgs</depend>

  <export>
  </export>
</package>
